# heic2jpeg

./: README.md  pyproject.toml
heic2jpeg/: cli.py
